--- a/crop_yield.ipynb
+++ b/crop_yield.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +134,14 @@
        "4           2051.4   165500.63     539.09     0.420909  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data=pd.read_csv('crop_yield.csv')\n",
-    "data.head()"
+    "data.head"
    ]
   },
   {
