--- a/crop_yield.ipynb
+++ b/crop_yield.ipynb
@@ -964,7 +964,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('64bit', '')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "print(platform.architecture())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1004,19 +1022,19 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "def evaluate_models(data, target_column):\n",
-    "    # Separate features and target variable\n",
+    "  \n",
     "    X = data.drop(columns=[target_column])\n",
     "    y = data[target_column]\n",
     "    \n",
-    "    # Split the data\n",
+    "\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "    \n",
-    "    # Standardize the features\n",
+    "\n",
     "    scaler = StandardScaler()\n",
     "    X_train_scaled = scaler.fit_transform(X_train)\n",
     "    X_test_scaled = scaler.transform(X_test)\n",
     "    \n",
-    "    # Initialize models\n",
+    "\n",
     "    models = {\n",
     "        'Linear Regression': LinearRegression(),\n",
     "        'Random Forest': RandomForestRegressor(n_estimators=100, random_state=42),\n",
@@ -1027,18 +1045,16 @@
     "    results = {}\n",
     "    \n",
     "    for name, model in models.items():\n",
-    "        # Train the model\n",
+    "   \n",
     "        model.fit(X_train_scaled, y_train)\n",
-    "        \n",
-    "        # Make predictions\n",
+    "\n",
     "        y_pred = model.predict(X_test_scaled)\n",
-    "        \n",
-    "        # Evaluate the model\n",
+    "      \n",
     "        mse = mean_squared_error(y_test, y_pred)\n",
     "        mae = mean_absolute_error(y_test, y_pred)\n",
     "        r2 = r2_score(y_test, y_pred)\n",
     "        \n",
-    "        # Store results\n",
+    "\n",
     "        results[name] = {\n",
     "            'Mean Squared Error': mse,\n",
     "            'Mean Absolute Error': mae,\n",
